<resources>
    <string name="app_name">To Do List</string>
    <string name="Task_name">Task name</string>
    <string name="Due_date">When is it due ? </string>
    <string name="Description">Description</string>
    <string name="Impritance"> How important is it ? </string>
    <string name="Save"> Save </string>
    <string name="Cancel">Cancel </string>
    <string name="title_activity_list">List</string>
    <string name="Diasplay">Display</string>


</resources>
